[project]
name = "reddit-agent"
version = "0.1.0"
description = ""
authors = [
    {name = "Ravinder Kanukuntla"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi[standard]>=0.115.12",
    "nlip_server>=0.1.2",
    "asyncio",
    "redis>=5.0.0",
    "httpx>=0.28.1",
    "mcp[cli]>=1.3.0",
    "requests>=2.31.0",

    # dev dependencies
    "black",
    "isort",
]
